Fix NavBar and Header spacing

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -2,20 +2,8 @@
     width: 393px;
     height: 58px;
     flex-shrink: 0;
-  }
-  
-  #statusBar {
-    display: inline-flex;
-    padding: 12px 14.5px 10px 0px;
-    align-items: center;
-    gap: 113.5px;
-  }
-  
-  #time {
     display: flex;
-    width: 180px;
-    height: 22px;
-    padding: 2px 118.5px 2px 29.5px;
+    flex-direction: row;
     align-items: center;
   }
   
@@ -27,11 +15,20 @@
     font-weight: 600;
     line-height: normal;
     letter-spacing: -0.165px;
+    width: 32px;
+    height: 18px;
+    margin-left: 38.5px;
+    margin-top: 21px;
+    margin-bottom: 19px;
+    margin-right: 118.5px;
   }
 
   #statusIcon {
     width: 67px;
     height: 11.5px;
     margin-left: 113.5px;
+    margin-top: 24.16px;
+    margin-bottom: 22.34px;
+    margin-right: 23.5px;
   }
   
